--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,6 +1,10 @@
 
 .status-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
     display: flex;
+    box-sizing: border-box;
     justify-content: center;
     padding: 5px 3px;
 }
@@ -20,5 +24,5 @@
     align-items: center;
 }
 .status-bar__column .fa-battery-full {
-    margin: 0px 5px;
+    margin: 0px 6px;
 }
