--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: var(--horizontal-space);
     padding-top: 40px;
+    margin-bottom: 15px;
 }
 .screen-header__title{
     font-size: 32px;
@@ -12,4 +13,5 @@
 }
 .screen-header__icons span {
     margin-left: 25px;
+    position: relative;
 }
