--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,7 +4,8 @@
     background-color: #fafafa;
     padding: 15px 0px;
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: -15px;
 }
 
 #friends-display-link i {
@@ -14,13 +15,9 @@
     margin-left: 5px;
 }
 
-.friends-screen {
-    padding: 0px var(--horizontal-space);
-}
-
 .friends-screen__channel{
     margin-top: 25px;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-top: var(--main-border);
     padding-top: 15px;
 }
 .friends-screen__channel-header{
