--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -38,7 +38,8 @@
 }
 
 #splash-screen {
-    background-color: var(--yellow);
+    background-color: white;
+    color: var(--yellow);
     position: absolute;
     height: 100vh;
     width: 100vw;
