--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -26,6 +26,8 @@
     padding: 15px 0px;
     font-size: 18px;
     margin-bottom: 25px;
+    color: white;
+    
 }
 
 #login-form input:not([type="submit"]) {
@@ -45,7 +47,8 @@
     background-color: var(--yellow);
     cursor:pointer;
     padding: 20px 0px;
-    border-radius: 5px;
+    border-radius: 40px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 }
 
 #login-form a {
